Fix wrong skill image on ios device

--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -1,5 +1,5 @@
 .Home {
-  padding: 1rem 2rem 1rem 2rem;
+  padding: 1rem 1rem 1rem 1rem;
 }
 .textBold {
   font-weight: 550;
